tests/tooling/fixtures/native/recovery/negative/negative_global_const_reference_cycle_initializer.objc3
// Expected diagnostic code(s): O3S210.
module NegativeGlobalConstReferenceCycleInitializer;

let left = right + 1;
let right = left + 1;

fn main() -> i32 {
  return left + right;
}
